@@ -1,6 +1,11 @@
 {
-    "content_dir": "/home/thenno/program/SimpleGopherServer/content",
-    "server": "localhost",
-    "port": 7070,
-    "request_timeout": 10.0
+    "server": {
+        "content_dir": "/home/thenno/program/SimpleGopherServer/content",
+        "server": "localhost",
+        "port": 7070,
+        "request_timeout": 10.0
+    },
+    "logging": {
+        "level": "DEBUG"
+    }
 }
